# VeriSynth-Research-OS

./: .env.example  .gitignore  100_PERCENT_ALIGNMENT.md  AGENT_ALIGNMENT_ANALYSIS.md  CONNECTORS_AND_UI_ADDED.md  Dockerfile  ENTERPRISE_FEATURES.md  IMPLEMENTATION_COMPLETE.md  LINE_BY_LINE_VERIFICATION.md  Makefile  RAG_ARCHITECTURE.md  README.md  README.md.backup  README_COMPLETE.md  Repository Structure  agents.core.llm_router.py  agents.core.maker.py  agents.data_retriever.agent.py  agents.exporter.agent.py  agents.memory.connectors.py  agents.memory.main.enterprise.py  agents.memory.main.py  agents.monitor.agent.py  agents.researcher.agent.py  agents.transformer.agent.py  agents.verifier.agent.py  agents.yaml  deploy.sh  ingest_example.py  install.sh  memory.agent.md  orchestrator.agent.py  pyproject.toml  requirements.txt  run_memory_agent.py  run_memory_agent_enterprise.py
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
app/: __init__.py  main.py
app/agents/: __init__.py
app/agents/exporter/: __init__.py  agent.py
app/agents/memory/: __init__.py  agent.py
app/agents/transformer/: __init__.py  agent.py
app/agents/verifier/: __init__.py  agent.py
app/api/: __init__.py
app/api/v1/: __init__.py  export.py  health.py  llm.py  maker.py  memory.py  transform.py  verify.py
app/core/: __init__.py  config.py  llm_router.py  maker.py  security.py
app/models/: __init__.py  schemas.py
static/: index.html
tests/: conftest.py  test_exporter.py  test_health.py  test_maker.py  test_transformer.py
