[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verisynthos"
version = "1.0.0"
description = "Production-ready multi-agent system for research, RAG, verification, and data processing"
readme = "README_COMPLETE.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.8.0",
    "numpy>=1.24.0",
    "google-auth>=2.23.0",
    "google-cloud-firestore>=2.13.0",
    "google-api-python-client>=2.100.0",
    "google-cloud-aiplatform>=1.38.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-tasks>=2.14.0",
    "google-cloud-vision>=3.4.0",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "pandas>=2.0.0",
    "lxml>=4.9.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-requests",
    "types-beautifulsoup4",
]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
